[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/main_menu.png" type="Texture" id=1]
[ext_resource path="res://ui/start/StartMenuButton.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 192, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 40, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 24, 24 )

[node name="StartMenuButton" type="TextureButton"]
unique_name_in_owner = true
margin_right = 24.0
margin_bottom = 24.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
stretch_mode = 3
script = ExtResource( 2 )

[connection signal="focus_entered" from="." to="." method="_on_StartMenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_StartMenuButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_StartMenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_StartMenuButton_mouse_exited"]
